using System;
using System.Collections.Generic;
using System.Text;

namespace Soul_Talk.Model
{
    public class LocalAuthority
    {
        private int localAuthorityId {  get; set; }
        private string localAuthorityName { get; set; }
        private string eanNumber { get; set; }
    }
}
